Bug 418482 - KMail does not display answer (in HTML-mode)
Summary: KMail does not display answer (in HTML-mode)
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.13.2
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-04 21:02 UTC by Axel Braun
Modified: 2020-03-05 08:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.0
Sentry Crash Report:


Attachments
example mail (12.03 KB, application/mbox)
2020-03-04 21:02 UTC, Axel Braun
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Braun 2020-03-04 21:02:57 UTC
Created attachment 126604 [details]
example mail

I have send a mail in HTML format to someone.
When I got the reply back I thougth 'Uh, did he hit send without entering an answer?'
In fact he did answer, but KMail does only display the original message ) see attached example)

Operating System: openSUSE Tumbleweed 20200229
KDE Plasma Version: 5.18.2
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Kernel Version: 5.5.6-1-default
Comment 1 Laurent Montel 2020-03-05 05:54:50 UTC
Hi, indeed it's wierd..
I will investigate it.
Comment 2 Laurent Montel 2020-03-05 06:00:27 UTC
"
That's interesting. I don't see new commits or anything relevant to it on the author's releases. I don't actually know why the author uses the other library as they do seem to have similar data... Maybe some other functions that are easier to use.<br><br><br>All the best,<br><br>C<br><br><br>-------- Original Message --------<br>On Mar 3, 2020, 09:56, Dr. Axel Braun < axel.braun@gnuhealth.org> wrote:<blockquote class=\"protonmail_quote\"><br><!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-html40/strict.dtd\">\r\n<html><head><meta name=\"qrichtext\" content=\"1\" />
"
Protomail is very interesting it writes answer outside html !
So it's mainly a bug in protomail.

I will try to create a workaround.
Comment 3 Laurent Montel 2020-03-05 06:15:18 UTC
Git commit 92aa5f2860ddace21196e88a4844c227b9bc6891 by Laurent Montel.
Committed on 05/03/2020 at 06:14.
Pushed by mlaurent into branch 'master'.

Extract code for creating autotest

M  +1    -41   messageviewer/src/messagepartthemes/default/defaultrenderer.cpp
M  +40   -0    messageviewer/src/utils/messageviewerutil.cpp
M  +3    -0    messageviewer/src/utils/messageviewerutil.h

https://commits.kde.org/messagelib/92aa5f2860ddace21196e88a4844c227b9bc6891
Comment 4 Laurent Montel 2020-03-05 07:04:03 UTC
Git commit 2036c38860e9b68952bb4d1bc2d15b53a965c343 by Laurent Montel.
Committed on 05/03/2020 at 07:03.
Pushed by mlaurent into branch 'master'.

Fix Bug 418482 - KMail does not display answer (in HTML-mode)
FIXED-IN: 5.14.0

M  +1    -1    messageviewer/src/utils/autotests/messageviewerutilstest.cpp
M  +10   -2    messageviewer/src/utils/messageviewerutil.cpp

https://commits.kde.org/messagelib/2036c38860e9b68952bb4d1bc2d15b53a965c343
Comment 5 Axel Braun 2020-03-05 07:40:56 UTC
(In reply to Laurent Montel from comment #2)

Hi Laurent, thank you for picking this up so quickly!

> Protomail is very interesting it writes answer outside html !
> So it's mainly a bug in protomail.

Shall we report it there as well? 
With which reference (why is it considered as bug)?
Comment 6 Laurent Montel 2020-03-05 08:02:42 UTC
It creates a mix between html and plain text in html answer.
it's wierd.

When we write an html anwser we write all as html.