Fix Bug 418482 - KMail does not display answer (in HTML-mode)

BUG: 418482
FIXED-IN: 5.14.0